assertJ nos testes, corrige locale costructor